--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ workload/.terraform
 workload/.terraform.lock.hcl
 workload/terraform.tfstate
 workload/terraform.tfstate.backup
+workload-vault-DPC
+workloadmTLS
