Updated folder structure
	modified:   ../.gitignore
	modified:   ../0_control-workspace/main.tf
	new file:   ../demo-nomad-mTLS/README.md
	new file:   ../demo-nomad-mTLS/consumer/demo-client.nomad.hcl
	new file:   ../demo-nomad-mTLS/consumer/demo-server.nomad.hcl
	new file:   ../demo-nomad-mTLS/consumer/nomad.sh
	new file:   ../demo-nomad-mTLS/consumer/vault_client.txt
	new file:   ../demo-nomad-mTLS/producer/pki_client.hcl
	new file:   ../demo-nomad-mTLS/producer/pki_server.hcl
	new file:   ../demo-nomad-mTLS/producer/vault.sh
	new file:   ../demo-nomad-mTLS/producer/vault_client.txt
	new file:   ../demo-nomad-mTLS/producer/vault_server.txt
	renamed:    ../workload/README.md -> ../demo-nomad-workload/README.md
	renamed:    ../workload/main.tf -> ../demo-nomad-workload/main.tf
	renamed:    ../workload/nomad-jobs/frontend.hcl -> ../demo-nomad-workload/nomad-jobs/frontend.hcl
	renamed:    ../workload/nomad-jobs/mongodb-vmdk.hcl -> ../demo-nomad-workload/nomad-jobs/mongodb-vmdk.hcl
	renamed:    ../workload/nomad-jobs/mongodb.hcl -> ../demo-nomad-workload/nomad-jobs/mongodb.hcl
	renamed:    ../splunk-tf/variables.tf -> ../demo-nomad-workload/variables.tf
	renamed:    ../workload/wait-for-nomad-job.sh -> ../demo-nomad-workload/wait-for-nomad-job.sh
	new file:   ../demo-vault-DPC/README.md
	new file:   ../demo-vault-DPC/consumer/main.tf
	new file:   ../demo-vault-DPC/consumer/variables.tf
	new file:   ../demo-vault-DPC/producer/main.tf
	new file:   ../demo-vault-DPC/producer/variables.tf
	renamed:    ../splunk-tf/README.md -> README.md
	renamed:    ../splunk-tf/main.tf -> main.tf
	renamed:    ../splunk-tf/nomad-jobs/1-demo-vault.nomad.hcl -> nomad-jobs/1-demo-vault.nomad.hcl
	renamed:    ../splunk-tf/nomad-jobs/2-demo-splunkv2.nomad.hcl -> nomad-jobs/2-demo-splunkv2.nomad.hcl
	renamed:    ../splunk-tf/nomad-jobs/3-demo-fluentd.nomad.hcl -> nomad-jobs/3-demo-fluentd.nomad.hcl
	renamed:    ../splunk-tf/outputs.tf -> outputs.tf
	renamed:    ../splunk-tf/splunk.png -> splunk.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ workloadmTLS
 demo-cert-auth
 splunk/vaultpki
 workload-pki
+demo-vault-ca-pki
+demo-vault-tls-cert-auth/1-create-cert/client1
+demo-vault-tls-cert-auth/1-create-cert/vault*
+demo-vault-tls-cert-auth/1-create-cert/cert.json
+demo-vault-tls-cert-auth/2-deploy-jobs/client*
+demo-nomad-workload/.terraform*
+demo-nomad-workload/terraform.tfstate
+demo-vault-DPC/consumer/.terraform*
+demo-vault-DPC/producer/.terraform*
